---
source: crates/forge_domain/src/transformer/reasoning_normalizer.rs
expression: snapshot
---
transformation: ReasoningNormalizer_first_has_reasoning
before:
  messages:
    - text:
        role: User
        content: User question
    - text:
        role: Assistant
        content: First assistant response with reasoning
        reasoning_details:
          - text: I need to think about this carefully
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type: ~
    - text:
        role: User
        content: Follow-up question
    - text:
        role: Assistant
        content: Second assistant response with reasoning
        reasoning_details:
          - text: I need to think about this carefully
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type: ~
    - text:
        role: Assistant
        content: Third assistant without reasoning
  reasoning:
    enabled: true
after:
  messages:
    - text:
        role: User
        content: User question
    - text:
        role: Assistant
        content: First assistant response with reasoning
        reasoning_details:
          - text: I need to think about this carefully
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type: ~
    - text:
        role: User
        content: Follow-up question
    - text:
        role: Assistant
        content: Second assistant response with reasoning
        reasoning_details:
          - text: I need to think about this carefully
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type: ~
    - text:
        role: Assistant
        content: Third assistant without reasoning
  reasoning:
    enabled: true
